京东移动端
京东移动端第二次提交

--- a/jdMobile/index.html
+++ b/jdMobile/index.html
@@ -41,28 +41,461 @@
             <!-- 导航 -->
             <div class="main-nav">
                 <ul>
-                    <li><a href="javascript:;"><img src="./image/nav_1.png" alt=""><span>京东超市</span></a></li>
-                    <li><a href="javascript:;"><img src="./image/nav_2.png" alt=""><span>京东超市</span></a></li>
-                    <li><a href="javascript:;"><img src="./image/nav_3.png" alt=""><span>京东超市</span></a></li>
-                    <li><a href="javascript:;"><img src="./image/nav_4.png" alt=""><span>京东超市</span></a></li>
-                    <li><a href="javascript:;"><img src="./image/nav_5.png" alt=""><span>理财</span></a></li>
-                    <li><a href="javascript:;"><img src="./image/nav_6.png" alt=""><span>理财</span></a></li>
-                    <li><a href="javascript:;"><img src="./image/nav_7.png" alt=""><span>理财</span></a></li>
-                    <li><a href="javascript:;"><img src="./image/nav_8.png" alt=""><span>理财</span></a></li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/nav_1.png" alt="">
+                            <span>京东超市</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/nav_2.png" alt="">
+                            <span>京东超市</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/nav_3.png" alt="">
+                            <span>京东超市</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/nav_4.png" alt="">
+                            <span>京东超市</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/nav_5.png" alt="">
+                            <span>理财</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/nav_6.png" alt="">
+                            <span>理财</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/nav_7.png" alt="">
+                            <span>理财</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/nav_8.png" alt="">
+                            <span>理财</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
+            <!-- 掌上秒杀 -->
+            <div class="main-ms">
+                <!-- 倒计时 -->
+                <div class="djs">
+                    <h3>掌上秒杀</h3>
+                    <div class="time">
+                        <span>00</span>:
+                        <span>00</span>:
+                        <span>00</span>
+                    </div>
+                    <a href="javascript:;">更多秒杀</a>
+                </div>
+                <!-- 秒杀商品 -->
+                <div class="mssp">
+                    <ul>
+                        <li>
+                            <a href="javascript:;">
+                                <img src="./image/seckill_1.jpg" alt="">
+                                <span class="newjg">￥79</span>
+                                <span class="lodjg">￥138</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:;">
+                                <img src="./image/seckill_2.jpg" alt="">
+                                <span class="newjg">￥79</span>
+                                <span class="lodjg">￥138</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:;">
+                                <img src="./image/seckill_3.jpg" alt="">
+                                <span class="newjg">￥79</span>
+                                <span class="lodjg">￥138</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 会场 -->
+            <div class="main-hc">
+                <img src="./image/banner_bg.jpg" alt="">
+                <ul>
+                    <li>
+                        <a href="javacript:;">
+                            <img src="./image/banner_1.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javacript:;">
+                            <img src="./image/banner_2.jpg" alt="">
+                        </a>
+                        <a href="javacript:;">
+                            <img src="./image/banner_3.jpg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 手机专享 -->
+            <div class="main-sjzx">
+                <ul>
+                    <li class="first">
+                        <a href="javascript">
+                            <img src="./image/major_1.jpg" alt="">
+                        </a>
+                    </li>
+                    <li class="first">
+                        <a href="javascript">
+                            <img src="./image/major_2.jpg" alt="">
+                        </a>
+                    </li>
+                    <li class="first">
+                        <a href="javascript">
+                            <img src="./image/major_3.jpg" alt="">
+                        </a>
+                    </li>
+                    <li class="last">
+                        <a href="javascript">
+                            <img src="./image/major_4.jpg" alt="">
+                        </a>
+                    </li>
+                    <li class="last">
+                        <a href="javascript">
+                            <img src="./image/major_5.jpg" alt="">
+                        </a>
+                    </li>
+                    <li class="last">
+                        <a href="javascript">
+                            <img src="./image/major_6.jpg" alt="">
+                        </a>
+                    </li>
+                    <li class="last">
+                        <a href="javascript">
+                            <img src="./image/major_7.jpg" alt="">
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- 广告1 -->
+            <div class="main-gg1">
+                <img src="./image/advert_1.jpg" alt="">
+            </div>
+            <!-- 特色超市 -->
+            <div class="main-tscs">
+                <h3>特色超市</h3>
+                <ul>
+                    <li>
+                        <a href="javasript:;">
+                            <img src="./image/market_1.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javasript:;">
+                            <img src="./image/market_2.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javasript:;">
+                            <img src="./image/market_3.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javasript:;">
+                            <img src="./image/market_4.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javasript:;">
+                            <img src="./image/market_5.jpg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 广告2 -->
+            <div class="main-gg1">
+                <img src="./image/advert_3.jpg" alt="">
+            </div>
+            <!-- 主题街 -->
+            <div class="main-ztj">
+                <h3>主题街</h3>
+                <ul>
+                    <li>
+                        <a href="javasript:;" class="yiban">
+                            <img src="./image/theme_1.jpg" alt="">
+                        </a>
+                        <a href="javasript:;" class="yiban">
+                            <img src="./image/theme_2.jpg" alt="">
+                        </a>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_3.jpg" alt="">
+                        </a>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_4.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_12.jpg" alt="">
+                        </a>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_5.jpg" alt="">
+                        </a>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_6.jpg" alt="">
+                        </a>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_7.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_8.jpg" alt="">
+                        </a>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_9.jpg" alt="">
+                        </a>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_10.jpg" alt="">
+                        </a>
+                        <a href="javasript:;" class="sfzy">
+                            <img src="./image/theme_11.jpg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 广告3 -->
+            <div class="main-gg1">
+                <img src="./image/advert_4.jpg" alt="">
+            </div>
+            <!-- 品牌 -->
+            <div class="main-brand">
+                <ul>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/brand_1.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/brand_2.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/brand_3.jpg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 广告4 -->
+            <div class="main-gg1">
+                <img src="./image/advert_7.jpg" alt="">
+            </div>
+            <!-- 商品 -->
+            <div class="main-item">
+                <div class="cnxh">
+                    <h3>猜你喜欢</h3>
+                    <a href="javascript:;">登录后更懂你</a>
+                </div>
+                <ul>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <img src="./image/item_6.jpg" alt="">
+                            <p>曼秀雷敦（Mentholatum）控油抗痘洁面乳150ml（男士洗面奶 洁面 控油）</p>
+                        </a>
+                        <div class="zxs">
+                            <span>￥25.25</span>
+                            <a href="javascript:;">看相似</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <!-- 点击加载更多 -->
+            <div class="main-djjzgd">
+                <a href="javascript:;">点击加载更多</a>
+            </div>
+            <!-- 登录注册 -->
+            <div class="main-dlzc">
+                <ul>
+                    <li>
+                        <a href="javascript:;">登录</a>
+                        <a href="javascript:;">登录</a>
+                        <a href="javascript:;">登录</a>
+                        <a href="javascript:;">登录</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 移动Pc选择 -->
+            <div class="main-ydpc">
+                <ul>
+                    <li>
+                        <a href="javascript:;">
+                            <b></b>
+                            <span>客户端</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <b></b>
+                            <span>触屏版</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
+                            <b></b>
+                            <span>电脑版</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 版权 -->
+            <div class="main-bq">
+                <p>Copyright © 2004-2016 京东JD.com 版权所有</p>
+            </div>
         </main>
+        <!-- 底部导航 -->
         <footer>
             <ul>
-                <li><a href="javascript:;"><img src="./image/index-icon.png" alt=""><span>京东</span></a></li>
-                <li><a href="javascript:;"><img src="./image/sort-icon.png" alt=""><span>京东</span></a></li>
-                <li><a href="javascript:;"><img src="./image/618-icon.png" alt=""></a></li>
-                <li><a href="javascript:;"><img src="./image/center-icon.png" alt=""><span>京东</span></a></li>
-                <li><a href="javascript:;"><img src="./image/center-icon.png" alt=""><span>京东</span></a></li>
+                <li>
+                    <a href="javascript:;">
+                        <img src="./image/index-icon.png" alt="">
+                        <span>京东</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:;">
+                        <img src="./image/sort-icon.png" alt="">
+                        <span>京东</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:;">
+                        <img src="./image/618-icon.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:;">
+                        <img src="./image/center-icon.png" alt="">
+                        <span>京东</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:;">
+                        <img src="./image/center-icon.png" alt="">
+                        <span>京东</span>
+                    </a>
+                </li>
             </ul>
         </footer>
     </div>
-
+    <script src="./js/iscroll.js"></script>
+    <script>
+    var myScroll = new IScroll('#wrapper');
+    </script>
 </body>
 
 </html>
